--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     tools:context=".pages.fragment.HomeFragment">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/square_refreshLayout"
+        android:id="@+id/home_refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:srlEnablePreviewInEditMode="false">
@@ -22,12 +22,12 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/square_tag_tab"
+                android:id="@+id/home_tag_tab"
                 android:layout_width="match_parent"
                 android:layout_height="36dp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/square_blog_list"
+                android:id="@+id/home_blog_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
