--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -47,6 +47,7 @@
                 android:id="@+id/user_detail_portrait"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
+                android:scaleType="fitCenter"
                 android:layout_alignParentEnd="true"
                 android:padding="8sp" />
         </RelativeLayout>
