--- a/app/src/main/res/layout/item_blog_outline.xml
+++ b/app/src/main/res/layout/item_blog_outline.xml
@@ -29,9 +29,9 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginEnd="8dp"
                 android:background="@color/white"
-                android:scaleType="fitXY"
-                app:roundHeight="6dp"
-                app:roundWidth="6dp" />
+                android:scaleType="fitCenter"
+                app:roundHeight="20dp"
+                app:roundWidth="20dp" />
 
             <LinearLayout
                 android:layout_width="0dp"
