--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,134 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-
-    android:id="@+id/main_drawer"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="tty.community.pages.activity.MainActivity">
-
-
-    <RelativeLayout
+    android:layout_height="match_parent">
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="54dp"
-            android:elevation="0dp"
-            android:fitsSystemWindows="true"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <tty.community.widget.RoundAngleImageView
-                    android:id="@+id/main_portrait"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="16dp"
-                    android:background="@color/white"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_user_gray_64dp"
-                    app:roundHeight="20dp"
-                    app:roundWidth="20dp" />
-
-                <TextView
-                    android:id="@+id/main_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="24dp"
-                    android:layout_toEndOf="@id/main_portrait"
-                    android:text="主页"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:id="@+id/main_search"
-                    android:layout_width="196dp"
-                    android:layout_height="32dp"
-                    android:scaleType="fitEnd"
-                    android:paddingStart="14dp"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="4dp"
-                    android:paddingEnd="14dp"
-                    android:layout_marginEnd="16dp"
-                    android:background="@drawable/border_capsule_white_32dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_search_gray_blod_64dp"
-                    android:contentDescription="@null" />
-            </RelativeLayout>
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-
-
-        <tty.community.widget.ViewPager
-            android:id="@+id/main_viewPager"
-            android:layout_below="@id/app_bar"
-            android:layout_above="@id/main_nav"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <com.getbase.floatingactionbutton.FloatingActionsMenu
-            android:id="@+id/main_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/main_nav"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/fab_margin"
-            app:fab_addButtonColorNormal="@color/colorPrimary"
-            app:fab_addButtonPlusIconColor="@color/white"
-            app:fab_addButtonSize="normal">
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_add_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_size="normal"
-                app:fab_icon="@drawable/ic_text_white_64dp"/>
-
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_add_richText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_icon="@drawable/ic_rich_text_white_64dp"
-                app:fab_size="normal"/>
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_add_markdown"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fab_colorNormal="@color/colorPrimary"
-                app:fab_icon="@drawable/ic_markdown_white_64dp"
-                app:fab_size="normal"/>
-
-        </com.getbase.floatingactionbutton.FloatingActionsMenu>
-
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/main_nav"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/white"
-            app:menu="@menu/nav_main" />
-    </RelativeLayout>
-
-    <fragment
-        android:name="tty.community.pages.fragment.UserFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:tag="USER"
-        android:id="@+id/fragment_user">
-    </fragment>
-
-
-</androidx.drawerlayout.widget.DrawerLayout>
+        android:layout_height="match_parent"/>
+</FrameLayout>
