--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -143,7 +143,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
@@ -153,14 +153,14 @@
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="6dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="22dp"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="帖子"
                             android:textColor="@color/white"
@@ -168,11 +168,11 @@
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="16dp"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="0"
                             android:textColor="@color/white"
-                            android:textSize="14sp" />
+                            android:textSize="18sp" />
                     </LinearLayout>
 
                     <View
@@ -182,7 +182,7 @@
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="6dp"
                         android:layout_marginEnd="6dp"
                         android:layout_weight="1"
@@ -190,7 +190,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="24dp"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="关注"
                             android:textColor="@color/white"
@@ -198,11 +198,11 @@
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="18dp"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="0"
                             android:textColor="@color/white"
-                            android:textSize="14sp" />
+                            android:textSize="18sp" />
                     </LinearLayout>
 
                     <View
@@ -212,14 +212,14 @@
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="6dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="24dp"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="粉丝"
                             android:textColor="@color/white"
@@ -227,11 +227,11 @@
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="15dp"
+                            android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="0"
                             android:textColor="@color/white"
-                            android:textSize="14sp" />
+                            android:textSize="18sp" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -265,30 +265,12 @@
             </RelativeLayout>
 
 
-            <ScrollView
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/user_recycler_view_activity"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-
-                    <androidx.viewpager.widget.ViewPager
-                        android:id="@+id/user_pager_activity"
-                        android:layout_width="match_parent"
-                        android:layout_height="128dp" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/user_recycler_view_activity"
-                        android:layout_width="match_parent"
-                        android:layout_height="128dp"
-                        android:layout_marginTop="16dp" />
-                </LinearLayout>
-            </ScrollView>
-
+                android:layout_weight="1"
+                android:layout_marginTop="16dp" />
 
             <Button
                 android:id="@+id/user_login"
